Fix SoftwareUL not centered

--- a/src/index.scss
+++ b/src/index.scss
@@ -91,7 +91,6 @@ a {
 }
 
 .SoftwaresUL {
-  display: flex;
   position: absolute;
   list-style-type: none;
   left: 45%;
